--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 		<div class="contact-text">
 			<h2>Contact Me</h2>
 			<h4>Let's Work Together</h4>
-			<p>Lorem Ipsum Is Simply Dummy Text Of The Printing And Typesetting Industry</p>
+			<p>You can contact me at anytime via the details provided below</p>
 			<div class="contact-list">
 				<li><a href="#">Nairobi- Kenya</a></li>
 				<li><a href="#">fauziaomala19@gmail.com</a></li>
