styling the images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Personal portfolio website design</title>
 	<!---custom css link--->
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./Css/style.css">
 
 	<link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -47,7 +47,7 @@
 	<section class="about" id="about">
 		<div class="about-img">
 		
-			<img src="./assets/FAU-IMAGE.jpg" class="rounded-circle w-75 h-75" alt="">
+			<img src="./images/FAU-IMAGE.jpg" class="rounded-circle w-75 h-75" alt="">
 		</div>
 		</div>
 		
@@ -75,19 +75,19 @@
 
 		<div class="services-content">
 			<div class="box1">
-				<img src="./assets/video-design.png">
+				<img src="./images/video-design.png">
 				<h3>Mobile App Design</h3>
 				<p>Am good at designing I designed a mobile App.</p>
 			</div>
 
 			<div class="box2">
-				<img src="./assets/Cover Art.jpg">
+				<img src="./images/Cover Art.jpg">
 				<h3>Posters Design</h3>
 				<p>Am good at making posters with both Adobe Illustrator and photoshop.</p>
 			</div>
 
 			<div class="box3">
-				<img src="./assets/designweb.png">
+				<img src="./images/designweb.png">
 				<h3>Website Design</h3>
 				<p>I can design websites and make it responsive using Figma and Adobe Xd</p>
 			</div>
@@ -100,7 +100,7 @@
 	<section class="portfolio" id="portfolio">
 		<div class="main-text">
 			<h2>My Portfolio</h2>
-			<h4>Some Of My Distinguished Works</h4>
+			<h4>Some Of My Works</h4>
 		</div>
 
 		<div class="portfolio-content">
@@ -264,7 +264,7 @@
 	<script src="https://unpkg.com/scrollreveal"></script>
 
 	<!---custom js link--->
-	<script type="text/javascript" src="./js/main.js"></script>
+	<script type="text/javascript" src="./Js/main.js"></script>
 
 </body>
 </html>
