--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
 				<h3>Website Design</h3>
 				<p>I can design websites and make it responsive using Figma and Adobe Xd</p>
 			</div>
+
+            <div class="box4">
+				<img src="./images/rostar.png">
+				<h3>Website Design</h3>
+				<p>I can design websites and make it responsive using Figma and Adobe Xd</p>
+			</div>
 	
 
 		</div>
