--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
             <div class="box4">
 				<img src="./images/rostar.png">
-				<h3>Website Design</h3>
-				<p>I can design websites and make it responsive using Figma and Adobe Xd</p>
+				<h3>Rocastar Website Design</h3>
+				<p>I can design websites and make it responsive using Figma</p>
 			</div>
 	
 
