--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div class="about-text">
 			<h2>About Me</h2>
 			<!-- <h4>Hi, Im Here To Help Your Next Project</h4> -->
-			<p class="min2">My job as a  web developer is to create websites.
+			<p class="min2">My job as a  software is to create websites.
 				While  on the other side my other role is to ensure
 			   the primary website
 				is visually appealing and easy to navigate, 
