--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="home-text">
 			<h4>Hello</h4>
 			<h1>I'M <span>FAU</span>ZIA <br> OMA<span>LLA</span></h1>
-			<h3>Front-End Developer</h3>
+			<h3>Software engineer</h3>
 		
 		</div>
 		
