styling and adding of images

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 	<!---about--->
 	<section class="about" id="about">
 		<div class="about-img">
-		
-			<img src="./images/FAU-IMAGE.jpg" class="rounded-circle w-75 h-75" alt="">
+		  <div class="glow">
+            <img src="./images/FAU-IMAGE.jpg" class="rounded-circle w-75 h-75" alt="">
+          </div>
+			
 		</div>
 		</div>
 		
@@ -98,6 +100,19 @@
 				<p>I can design websites and make it responsive using Figma</p>
 			</div>
 	
+
+            <div class="box5">
+				<img src="./images/screen.png">
+				<h3>Rocastar Website Design</h3>
+				<p>Designed a stationery website then coded it</p>
+			</div>
+
+            <div class="box6">
+				<img src="./images/word.jpeg">
+				<h3>Rocastar Website Design</h3>
+				<p>fa,iliar with using word press by hoistin <br>
+                and editing template</p>
+			</div>
 
 		</div>
 	</section>
